src/ui/snapshots/state/default/release_notes_export/with_input.snap
---
source: src/ui/state/default/release_notes_export.rs
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                 📝 Export Release Notes                                                " Hidden by multi-width symbols: [(50, " ")]
"                                                                                                                        "
"                                                                                                                        "
"  ┌File Path─────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │/custom/path/release_notes.md                                                                                     │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                     Default: /path/to/repo/release_notes_v1.0.0.md                                     "
"                                                                                                                        "
"                                                                                                                        "
"  ┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │              Enter: Export (default path) | Type path + Enter: Export to custom path | Esc: Go back              │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
